bakernet.com (archived on 2004-12-04)
{
  "alexa_rank": NaN,
  "analysis_subcorpus": true,
  "categories": "business;education",
  "char_count": 3556,
  "classifier_probability": 0.74,
  "cross_domain_homepage_redir": false,
  "flesch_ease": "fairly_difficult",
  "flesch_kincaid": 10.64,
  "homepage_snapshot_redirected_domain": "bakernet.com",
  "homepage_snapshot_redirected_url": "https://web.archive.org/web/20041009193736id_/http://www.bakernet.com/BakerNet/default.htm",
  "homepage_snapshot_url": "https://web.archive.org/web/20040929075927id_/http%3A//bakernet.com",
  "interval": "2004_B",
  "link_text": "Privacy Statement",
  "parked_domain": false,
  "phase": "B",
  "policy_domain": "bakernet.com",
  "policy_filetype": "html",
  "policy_snapshot_url": "https://web.archive.org/web/20041204203811id_/http%3A//www.bakernet.com/BakerNet/Firm%2BProfile/Legal%2BInformation.htm",
  "policy_title": "Baker & McKenzie || Firm Profile || Legal Information",
  "policy_url": "bakernet.com/BakerNet/Firm+Profile/Legal+Information.htm",
  "sha1": "6d1df5b53b180667e7147e1c3633f3c6c5251c76",
  "simhash": 14995417236210409888,
  "simhash_updated": true,
  "site_hostname": "bakernet.com",
  "site_url": "http://bakernet.com",
  "smog": NaN,
  "strict_updated": true,
  "timestamp": "20041204203811",
  "word_count": 592,
  "year": 2004
}

--- a/b/ba/bak/bakernet.com.html
+++ b/b/ba/bak/bakernet.com.html
@@ -1,5 +1,5 @@
-<!--The following is the downloaded HTML source of the bakernet.com privacy policy that was archived on 2004-06-17.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20040617150952id_/http%3A//www.bakernet.com/BakerNet/Firm%2BProfile/Legal%2BInformation.htm) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the bakernet.com privacy policy that was archived on 2004-12-04.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20041204203811id_/http%3A//www.bakernet.com/BakerNet/Firm%2BProfile/Legal%2BInformation.htm) for the most accurate reproduction.-->
 
 <!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.0 Transitional//EN"><html><head>
 		<!-- For Graphic Roll-Overs -->
@@ -213,13 +213,13 @@ if (!ver4) event=null;
 
 		mm_menu_Resources.addMenuItem("Client Sites","location='/BakerNet/Resources/Client+Sites/'","29");
 
-		mm_menu_Resources.addMenuItem("E Commerce","location='/BakerNet/Resources/E+Commerce/'","29");
-
-		mm_menu_Resources.addMenuItem("Law Alerts","location='/BakerNet/Resources/Law+Alerts/'","29");
+		mm_menu_Resources.addMenuItem("LawInContext","location='/BakerNet/Resources/LawInContext/'","29");
 
 		mm_menu_Resources.addMenuItem("Newsletters","location='/BakerNet/Resources/Newsletters/'","29");
 
 		mm_menu_Resources.addMenuItem("Publications","location='/BakerNet/Resources/Publications/'","29");
+
+		mm_menu_Resources.addMenuItem("Law Alerts","location='/BakerNet/Resources/Law+Alerts/'","29");
 
 		mm_menu_Resources.hideOnMouseOut=true;
 		mm_menu_Resources.menuBorder=1;
@@ -244,8 +244,8 @@ document.write("<SCR" +  "IPT LANGUAGE='Javascript1.2' SRC='/nr/bakernet/js_file
 		<title>
 			Baker &amp; McKenzie || Firm Profile || Legal Information
 		</title>
-		<meta name="Description" content="">
-<meta name="Keywords" content="">
+		<meta name="Description" content="Baker &amp; McKenzie disclaimer page.">
+<meta name="Keywords" content="Baker &amp; McKenzie, disclaimer">
 
 		<link rel="stylesheet" href="/nr/bakernet/stylesheets/textstyle.css" type="text/css">
 	
@@ -294,42 +294,56 @@ document.write("<SCR" +  "IPT LANGUAGE='Javascript1.2' SRC='/nr/bakernet/js_file
 		
 			<table class="standard" width="520" border="0" cellspacing="2" cellpadding="2" valign="top" align="center">
 				<tbody><tr>
-					<td class="standard"><div>
+					<td class="standard"><div><font size="2">
 <hr noshade="">
-</div>
+</font></div>
 <ul>
-<li><a href="#Disclaimer" target="_self"><strong>Disclaimer</strong></a><strong> </strong>
+<li><strong><font size="2"><a href="#Disclaimer" target="_self">Disclaimers</a></font></strong><strong><font size="2"> </font></strong>
 <p></p>
-</li><li><a href="#Copyright" target="_self"><strong>Copyright and Reproduction Notice</strong></a><strong> </strong>
+</li><li><strong><font size="2"><a href="#Copyright" target="_self">Copyright and Reproduction Notice</a></font></strong><strong><font size="2"> </font></strong></li></ul>
+<p><font size="2"></font></p>
+<ul>
+<li><strong><font size="2"><a href="#Privacy" target="_self">Privacy Statement</a></font></strong><font size="2"> </font>
 <p></p>
-</li><li><a href="#Privacy" target="_self"><strong>Privacy Statement</strong></a></li></ul>
-<div>
+</li><li><strong><u><font size="2"><a id="_self" href="#Specialization" name="_self">Specialization</a></font></u></strong></li></ul>
+<p><font size="2"></font></p><font size="2">
 <hr noshade="">
-</div><a name="Disclaimer">
-<h5>IMPORTANT DISCLAIMER:</h5></a>
-<p>All material included in the Baker &amp; McKenzie Web sites is for informational purposes only and may not reflect the most current legal developments, verdicts or settlements. The information should in no way be taken as an indication of future results. The material contained herein is not offered as legal or any other advice on any particular matter. The Firm and the contributing authors expressly disclaim all liability to any person in respect of anything and in respect of the consequences of anything done or omitted to be done wholly or partly in reliance upon the whole or any part of the contents of the Baker &amp; McKenzie Web sites. Transmission of this information is not intended to create and receipt does not constitute an attorney-client relationship between Baker &amp; McKenzie and the user or browser. No client or other reader should act or refrain from acting on the basis of any matter contained in the Baker &amp; McKenzie Web sites without seeking the appropriate legal or other professional advice on the particular facts and circumstances at issue. Baker &amp; McKenzie is not responsible for any third party contents which can be accessed through the website. </p>
-<p><a href="#top" target="_self">Back to Top</a></p>
-<div>
+</font>
+<p></p><a name="Disclaimer">
+<p><font size="2"><strong>Disclaimers</strong></font></p></a>
+<p><font size="2">Baker &amp; McKenzie International is a Swiss Verein with member law firms around the world. In accordance with the common terminology used in professional service organizations, reference to a "partner" means a person who is a partner, or equivalent, in such a law firm. Similarly, reference to an "office" means an office of any such law firm.</font></p>
+<p><font size="2">The Baker &amp; McKenzie Web sites are intended for informational purposes only. Nothing in the sites is to be considered as either creating an attorney-client relationship between the reader and Baker &amp; McKenzie or as rendering of legal advice for any specific matter. Readers are responsible for obtaining such advice from their own legal counsel. </font></p>
+<p><font size="2">No client or other reader should act or refrain from acting on the basis of any information contained in the Baker &amp; McKenzie Web sites without seeking appropriate legal or other professional advice on the particular facts and circumstances at issue. </font></p>
+<p><font size="2"><a href="#top" target="_self">Back to Top</a></font></p>
+<div><font size="2">
 <hr noshade="">
-</div><a name="Copyright">
-<h5>COPYRIGHT AND REPRODUCTION NOTICE:</h5></a>
-<p>Copyright © 2001, Baker &amp; McKenzie. All rights reserved. </p>
-<p>Reproduction of part or all of the contents in any form is prohibited other than for individual use only and may not be recopied and shared with a third party. The permission to recopy by an individual does not allow for incorporation of material or any part of it in any work or publication, whether in hard copy, electronic, or any other form. </p>
-<p>The lawyers resident in all offices, unless otherwise indicated, are not certified by the Texas Board of Legal Specialization.</p>
-<p><a href="#top" target="_self">Back to Top</a></p>
-<div>
+</font></div><a name="Copyright">
+<p><strong><font size="2">Copyright and Reproduction Notice</font></strong></p></a>
+<p><font size="2">Copyright © 2004, Baker &amp; McKenzie. All rights reserved. </font></p>
+<p><font size="2">Reproduction of part or all of the contents in any form of the Baker &amp; McKenzie Web sites is prohibited other than for individual use only and may not be recopied and shared with a third party. The permission to recopy by an individual does not allow for incorporation of material or any part of it in any work or publication, whether in hard copy, electronic, or any other form.</font></p>
+<p><font size="2"><a href="#top" target="_self">Back to Top</a></font></p>
+<div><font size="2">
 <hr noshade="">
-</div><a name="Privacy">
-<h5>PRIVACY STATEMENT:</h5></a>
-<p><strong>Personal Information</strong><br>At Baker &amp; McKenzie, we intend to give you as much control as possible over your personal information. In general, you can visit our Web sites without telling us who you are or revealing any information about yourself. There are times, however, when we may need information from you, such as your name and email address. It is our intent to let you know before we collect personal information from you on the Internet.</p>
-<p>If you choose to give us personal information via the Internet that we may need -- to correspond with you or provide you with a subscription, for example -- it is our intent to let you know how we will use such information. If you tell us that you do not wish to have this information used as a basis for further contact with you, we will respect your wishes. We do keep track of the domains from which people visit us. We analyze this data for trends and statistics, and then we discard it.</p>
-<p><strong>Business Relationships</strong><br>Baker &amp; McKenzie Web sites&nbsp;contain links to other Web sites. Baker &amp; McKenzie is not responsible for the privacy practices or the content of such Web sites.</p>
-<p><strong>Cookies</strong><br>There is a technology called "cookies" which can be used to provide you with tailored information from a Web site. A cookie is an element of data that a Web site can send to your browser, which may then store it on your system. Baker &amp; McKenzie Web sites use cookies so that we can better serve you when you return to our site. You can set your browser to notify you when you receive a cookie, giving you the chance to decide whether to accept it.</p>
-<p><a href="#top" target="_self">Back to Top</a></p>
-<div>
+</font></div><a name="Privacy">
+<p><strong><font size="2">Privacy Statement</font></strong></p></a>
+<p><font size="2"><em>Personal Information<br></em>At Baker &amp; McKenzie, we intend to give you as much control as possible over your personal information. In general, you can visit our Web sites without telling us who you are or revealing any information about yourself. There are times, however, when we may need information from you, such as your name and e-mail address, to correspond with you or provide you with a subscription, for example. If you choose to give us personal information via the Internet, it is our intent to let you know how we will use such information. If you tell us that you do not wish to have this information used as a basis for further contact with you, we will respect your wishes.</font></p>
+<p><font size="2">We do keep track of the domains from which people visit us. We analyze this data for trends and statistics, and then we discard it.</font></p>
+<p><font size="2"></font></p>
+<p><font size="2"><em>Business Relationships</em><br>Baker &amp; McKenzie Web sites contain links to other Web sites. Baker &amp; McKenzie is not responsible for the privacy practices or the content of such Web sites.</font></p>
+<p><font size="2"><em>Cookies</em><br>There is a technology called "cookies" that can be used to provide you with tailored information from a Web site. A cookie is an element of data that a Web site can send to your browser, which may then store it on your system. Baker &amp; McKenzie Web sites use cookies so that we can better serve you when you return to our site. You can set your browser to notify you when you receive a cookie, giving you the chance to decide whether to accept it.</font></p>
+<p><font size="2"><a href="#top" target="_self">Back to Top</a></font></p>
+<p><font size="2"></font></p><font size="2">
 <hr noshade="">
-</div>
-<p><a href="mailto:edward.j.zulkey@bakernet.com"><u>Edward J. Zulkey</u></a>, in the Firm's International Executive Offices in Chicago, is responsible for the content of this document.</p></td>
+</font>
+<div></div><a name="Specialization">
+<p><strong><font size="2">Specialization</font></strong></p></a>
+<p><font size="2"></font></p>
+<p><font size="2">Our lawyers tend to limit their practice to certain areas of the law. Except where specifically noted, none is certified by the jurisdiction in which he or she practices as a specialist in any area of practice. The lawyers resident in all offices, unless otherwise indicated, are not certified by the Texas Board of Legal Specialization.</font></p>
+<p><font size="2"><a href="#top" target="_self">Back to Top</a></font></p>
+<div><font size="2">
+<hr noshade="">
+</font></div>
+<p><a href="mailto:edward.j.zulkey@bakernet.com"><u><font size="2">Edward J. Zulkey</font></u></a><font size="2">, in the Firm's International Executive Offices in Chicago, is responsible for the content of this document.</font></p></td>
 				</tr>
 			</tbody></table>
 			<p>
@@ -392,4 +406,12 @@ document.write("<SCR" +  "IPT LANGUAGE='Javascript1.2' SRC='/nr/bakernet/js_file
 		</td>
 	</tr>
 </tbody></table>
-<!-- END: Pop Up Footer Table --></p></body></html>
+<!-- END: Pop Up Footer Table -->
+		
+	
+<!-- Inserted by Content Management Server: BEGIN EmbedBodyEndHook -->
+
+<!-- Inserted by Content Management Server: END EmbedBodyEndHook -->
+
+
+</p></body></html>
