sellathon.com (archived on 2004-12-04)
{
  "alexa_rank": NaN,
  "analysis_subcorpus": true,
  "categories": "uncategorized",
  "char_count": 3836,
  "classifier_probability": 0.98,
  "cross_domain_homepage_redir": false,
  "flesch_ease": "difficult",
  "flesch_kincaid": 13.96,
  "homepage_snapshot_redirected_domain": "sellathon.com",
  "homepage_snapshot_redirected_url": "https://web.archive.org/web/20041001030557id_/http://www.sellathon.com/",
  "homepage_snapshot_url": "https://web.archive.org/web/20041001030557id_/http%3A//sellathon.com",
  "interval": "2004_B",
  "link_text": "PRIVACY POLICY",
  "parked_domain": false,
  "phase": "B",
  "policy_domain": "sellathon.com",
  "policy_filetype": "html",
  "policy_snapshot_url": "https://web.archive.org/web/20041204204500id_/http%3A//www.sellathon.com/pp.html",
  "policy_title": "Sellathon\u2122 Privacy Policy",
  "policy_url": "sellathon.com/pp.html",
  "sha1": "ba7b24acbb5b2508ff30e1b897fbb37e705fa9a7",
  "simhash": 17769497343470909892,
  "simhash_updated": false,
  "site_hostname": "sellathon.com",
  "site_url": "http://sellathon.com",
  "smog": NaN,
  "strict_updated": false,
  "timestamp": "20041204204500",
  "word_count": 622,
  "year": 2004
}

--- a/s/se/sel/sellathon.com.html
+++ b/s/se/sel/sellathon.com.html
@@ -1,5 +1,5 @@
-<!--The following is the downloaded HTML source of the sellathon.com privacy policy that was archived on 2004-06-14.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20040614105435id_/http%3A//www.sellathon.com/pp.html) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the sellathon.com privacy policy that was archived on 2004-12-04.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20041204204500id_/http%3A//www.sellathon.com/pp.html) for the most accurate reproduction.-->
 
 <html><head><title>Sellathon™ Privacy Policy</title>
 
@@ -11,13 +11,14 @@ A:hover {text-decoration: underline;}
 </head>
 
 
+
 <body><center>
 <table width="80%" cellpadding="0" cellspacing="0" border="0">
 <tbody><tr height="124">
-<td width="156"><a href="index.html"><img src="../images/logo_candidate.gif" border="0"></a></td><td width="*" background="../images/maroon_menu.gif" align="right" valign="center">
+<td width="156"><a href="index.php"><img src="logo_candidate.gif" border="0"></a></td><td width="*" background="maroon_menu.gif" align="right" valign="center">
 <font face="verdana" size="1" color="white">
-<a href="index.php"><font color="white"><font size="2">H</font>ome</font></a> &nbsp;·&nbsp; <a href="contact.html"><font color="white"><font size="2">C</font>ontact</font></a><font color="white"> &nbsp;·&nbsp; <font color="yellow"><font size="2">P</font>rivacy <font size="2">P</font>olicy</font> &nbsp;·&nbsp; <a href="aboutus.html"><font color="white"><font size="2">A</font>bout <font size="2">U</font>s</font></a><font color="white"> &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</font></font></font>
-</td><td width="46"><a href="http://www.sellathon2.com/login.php"><img src="../images/maroon_menu2.gif" border="0"></a></td>
+<a href="index.php"><font color="white"><font size="2">H</font>ome</font></a> &nbsp;·&nbsp; <a href="tos.html"><font color="white"><font size="2">T</font>erms of <font size="2">S</font>ervice</font></a> &nbsp;·&nbsp; <a href="affagree.html"><font color="white"><font size="2">A</font>ffiliate <font size="2">A</font>greement</font></a><font color="white"> &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</font></font>
+</td><td width="46"><a href="login.html"><img src="maroon_menu2.gif" border="0"></a></td>
 </tr>
 </tbody></table>
 
@@ -166,9 +167,5 @@ for that purpose.<br><br>
 
 <br>
 <hr width="80%">
-<font face="verdana" size="1">©2003 by Sellathon, Inc. All Rights Reserved.<br><br>
-<a href="aboutus.html">ABOUT US</a> | <a href="tos.html">TERMS OF SERVICE</a> | <a href="pp.html">PRIVACY POLICY</a> | <a href="contact.html">CONTACT</a><br><br>
-<a href="index.php">HOME</a> | <a href="faq.html">F.A.Q.</a> | <a href="testimonials.html">TESTIMONIALS</a> | <a href="affiliates.html">AFFILIATE PROGRAM</a> | <a href="order.php">ORDER</a> | <a href="http://www.sellathon2.com/login.php">LOG IN</a><br>
-
-
+<font face="verdana" size="1">©2003-2004 by Sellathon, Inc. All Rights Reserved.<br><br>
 </font></center></body></html>
