--- a/c/ca/cad/cadillacforums.com.html
+++ b/c/ca/cad/cadillacforums.com.html
@@ -1,5 +1,5 @@
-<!--The following is the downloaded HTML source of the cadillacforums.com privacy policy that was archived on 2004-06-02.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20040602184716id_/http%3A//cadillacforums.com/privacy.html) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the cadillacforums.com privacy policy that was archived on 2004-12-04.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20041204204613id_/http%3A//www.cadillacforums.com/privacy.html) for the most accurate reproduction.-->
 
 <!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN"><html><head>
 <title>Cadillac Forums: The Cadillac web site for serious enthusiasts</title>
