--- a/c/cf/cfr/cfra.org.html
+++ b/c/cf/cfr/cfra.org.html
@@ -1,5 +1,5 @@
-<!--The following is the downloaded HTML source of the cfra.org privacy policy that was archived on 2004-06-06.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20040606035540id_/http%3A//cfra.org/center/policy.htm) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the cfra.org privacy policy that was archived on 2004-12-04.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20041204204913id_/http%3A//www.cfra.org/center/policy.htm) for the most accurate reproduction.-->
 
 <html><head>
 <meta http-equiv="Content-Type" content="text/html; charset=windows-1252">
