--- a/l/li/lif/lifeisajoke.com.html
+++ b/l/li/lif/lifeisajoke.com.html
@@ -1,5 +1,5 @@
-<!--The following is the downloaded HTML source of the lifeisajoke.com privacy policy that was archived on 2004-06-23.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20040623033837id_/http%3A//lifeisajoke.com/privacy_html.htm) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the lifeisajoke.com privacy policy that was archived on 2004-12-04.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20041204205433id_/http%3A//www.lifeisajoke.com/privacy_html.htm) for the most accurate reproduction.-->
 
 <html><head>
 <title>Privacy Statement for Lifeisajoke</title>
