chessgames.com (archived on 2004-12-04)
{
  "alexa_rank": NaN,
  "analysis_subcorpus": true,
  "categories": "education",
  "char_count": 2450,
  "classifier_probability": 0.92,
  "cross_domain_homepage_redir": false,
  "flesch_ease": "difficult",
  "flesch_kincaid": 11.5,
  "homepage_snapshot_redirected_domain": "chessgames.com",
  "homepage_snapshot_redirected_url": "https://web.archive.org/web/20040929055939id_/http://www.chessgames.com/",
  "homepage_snapshot_url": "https://web.archive.org/web/20040929055939id_/http%3A//chessgames.com",
  "interval": "2004_B",
  "link_text": "privacy notice",
  "parked_domain": false,
  "phase": "B",
  "policy_domain": "chessgames.com",
  "policy_filetype": "html",
  "policy_snapshot_url": "https://web.archive.org/web/20041204210001id_/http%3A//www.chessgames.com/chessprivacy.html",
  "policy_title": "ChessGames.com Privacy Notice",
  "policy_url": "chessgames.com/chessprivacy.html",
  "sha1": "d8898dd7b304259ea3b5d10902d6fa2295c6b587",
  "simhash": 1518175187378489856,
  "simhash_updated": false,
  "site_hostname": "chessgames.com",
  "site_url": "http://chessgames.com",
  "smog": NaN,
  "strict_updated": false,
  "timestamp": "20041204210001",
  "word_count": 395,
  "year": 2004
}

--- a/c/ch/che/chessgames.com.html
+++ b/c/ch/che/chessgames.com.html
@@ -1,5 +1,5 @@
-<!--The following is the downloaded HTML source of the chessgames.com privacy policy that was archived on 2004-06-03.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20040603200856id_/http%3A//www.chessgames.com/chessprivacy.html) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the chessgames.com privacy policy that was archived on 2004-12-04.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20041204210001id_/http%3A//www.chessgames.com/chessprivacy.html) for the most accurate reproduction.-->
 
 <html><!--beginheader--><head>
 <meta name="keywords" content="chess, chess games, chess download, chess forums, PGN, chess database">
@@ -34,7 +34,7 @@ SELECT {
 
 
 
-<body bgcolor="#FFFFFF" vlink="#6600FF" marginheight="0" topmargin="0" rightmargin="0">
+<body bgcolor="#FFFFFF" vlink="#9900FF" link="#0000FF" marginheight="0" topmargin="0" rightmargin="0">
 <table border="0" cellpadding="0" cellspacing="0" bgcolor="#FFFFFF" width="100%">
 <tbody><tr><td valign="TOP" align="LEFT" background="/chessimages/header_stripes.gif"><a href="/index.html"><img src="/chessimages/chessgameslogo.gif" width="431" height="60" border="0" alt="chessgames.com"></a></td>
 <td width="100%" background="/chessimages/header_stripes.gif" align="RIGHT" valign="TOP"><img src="/chessimages/header_menu.gif" width="238" height="60" usemap="#navbar" border="0"></td></tr>
@@ -84,8 +84,9 @@ requests made of the chessgames.com servers.
 Such information includes i.p. addresses, the chessgames.com pages
 requested, the kind of browser used, etc.
 While we do not analyze these logfiles with regards to individual users,
-we study this data <i>in aggregate</i> in order to improve the site.
+we study these data in aggregate in order to improve the site.
 </p><p>
+
 <b>Cookies:</b> If your browser accepts cookies, you will receive a
 chessgames.com cookie the first time you visit our site.  This cookie
 allows us to customize the site's
@@ -93,24 +94,31 @@ behavior and appearance to fit your tastes.  We do not use the cookie for any
 other purpose, and you are free to erase your cookie at any time by 
 visiting the <a href="/perl/chesslogout.pl">logout page.</a>
 </p><p>
-It is possible to disable cookies entirely, by changing the configuration
-of your web browser.
-We strongly advise against that, however, as it will deny you of some of
-the web's coolest features, including the features at chessgames.com.
+
+It is possible to disable cookies entirely, by changing the configuration of your web browser. We strongly advise against that, however, as it will deny you of
+some of the web's coolest features, including the features at chessgames.com. 
+
 </p><p>
-<b>Children:</b> When a child under age 13 registers with chessgames.com,
-we suggest that a parent is present to prevent the child from
-inadvertantly volunteering private information.  
-</p></font><p><font face="verdana,arial,helvetica">
 
-</font></p></blockquote>
+<b>Children:</b> When a child under age 13 registers with chessgames.com, we suggest that a parent is present to prevent the child from inadvertantly
+volunteering private information. 
 
-</td></tr></tbody></table>
-<p>
+</p><p>
 
+<b>Credit Card Information:</b> All credit card information is
+transmitted through an SSL-encrypted secure channel.
+If you send us credit card information to register for 
+premium membership, we destroy this information (including the credit card number) 
+immediately after your credit card is
+processed.  We will never automatically rebill you for
+services.  We do, however, retain the last 4 digits of
+the credit card for identification purposes.
+
+</p></font></blockquote></td></tr></tbody></table>
+</center>
 
 <!--beginfooter-->
-</p><p>
+<p>
 </p><center>
 <hr noshade="" size="1">
 <font face="verdana,arial,helvetica" size="-1">
@@ -121,6 +129,7 @@ inadvertantly volunteering private information.
 <a href="/chesshelp.html">F.A.Q.</a> | 
 <a href="/perl/chessuser">your&nbsp;profile</a> | 
 <a href="/perl/chessprofile.pl">preferences</a> | 
+<a href="/perl/chessmembers">Premium&nbsp;Membership</a> |
 <a href="/perl/chessforum.pl">Kibitzer's&nbsp;Café</a> | 
 <a href="/perl/chessnew">new&nbsp;kibitzing</a> | 
 <a href="/chessgames.html">new&nbsp;games</a> | 
@@ -132,7 +141,7 @@ inadvertantly volunteering private information.
 </font>
 <hr noshade="" size="1">
 <font face="verdana,arial,helvetica" size="-2">
-Copyright 2002, Chessgames.com<br>
+Copyright 2001-2004, Chessgames.com<br>
 Web design &amp; database development by
 <a href="http://www.2020tech.com/">20/20 Technologies</a>
 </font>
@@ -145,4 +154,6 @@ Web design &amp; database development by
 </pre>
 
 <!--endfooter-->
-</center></body></html>
+
+
+</body></html>
